fix(lance): address integration review comments